# infra

./: .gitignore  .pre-commit-config.yaml  .sops.yaml  .terraform.lock.hcl  Makefile  Pulumi.infra.yaml  Pulumi.tqtensor.yaml  Pulumi.yaml  README.md  __main__.py  auth  devcontainer.json  install_docker.sh  install_wireguard.sh  passphrase.yaml  provider.tf  pulumi_helper.sh  pyproject.toml  state.dvc  teleport.tf  vm_datahoarder.tf  vm_fragrantica.tf  vm_krypfolio.tf  vm_newsagg.tf  vm_traefik.tf  vm_workspace.tf  workspace.tf
.dvc/: config
artifacts/: participants.csv
configs/traefik/: README.md
configs/traefik/data/: docker-compose.yml  traefik.yaml
resources/: airbyte.py  constants.py  nextcloud.py
resources/api/: __init__.py  google_search.py  openai.py
resources/api/gateway/: config.yaml  replicate.py  replicate.yaml
resources/api/litellm/: __init__.py  virtual_keys.py  virtual_keys.yaml
resources/api/openai/: __init__.py  sweden.py
resources/cloudflare/: __init__.py
resources/cloudflare/record/: __init__.py  r2.py  tqtensor_com.py  tqtensor_com_workshop.py  unifai_dev.py
resources/cloudflare/tls/: __init__.py  airbyte_tqtensor_com.py  grokking_tqtensor_com.py  jupyterhub_tqtensor_com.py  litellm_tqtensor_com.py  litellm_unifai_dev.py  utils.py  (+10 more)
resources/db/: __init__.py
resources/ec2/: __init__.py  airbyte.py  nextcloud.py
resources/ecr/: __init__.py
resources/iam/: __init__.py  bedrock.py  duplicati.py  nextcloud.py
resources/k8s/: __init__.py  auto_pilot_europe_west4.py  providers.py
resources/kms/: __init__.py  aws.py  gke.py  pulumi_secrets.py  sops.py
resources/providers/: __init__.py  aws.py  az.py  gcp.py  k8s.py  scw.py  sw.py
resources/resource_group/: __init__.py  malaysia.py  sweden.py
resources/s3/: __init__.py  bucket.py  duplicati.py
resources/sagemaker/: __init__.py
resources/serverless/: __init__.py
resources/storage/: bucket.py
resources/utils/: __init__.py
resources/vm/: __init__.py  keypair.py
script/: README.md  gpu-hookscript.sh
scripts/: cleanup_r2_multipart.sh
wiki/: NextCloud.md  NooBaa.md  tailscale.sh
(+213 files in other folders)
