[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
pulumi = ">=3.0.0,<4.0.0"
pulumi-aws = "^6.66.2"
pulumi-awsx = "^2.21.0"
pulumi-cloudflare = "^5.47.0"
pulumi-kubernetes = "^4.21.1"
pulumi-postgresql = "^3.15.0"
pulumi-tls = "^5.1.0"
python = "^3.10"
sopsy = "^1.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
flake8 = "^7.1.1"
pulumi-gcp = "^8.18.0"
toml-sort = "^0.24.2"
