[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
awscli = "^1.38.16"
pg8000 = "^1.31.2"
pulumi = ">=3.0.0,<4.0.0"
pulumi-aws = "^6.66.2"
pulumi-awsx = "^2.21.0"
pulumi-azure-native = "^2.89.1"
pulumi-cloudflare = "^5.47.0"
pulumi-kubernetes = "^4.21.1"
pulumi-postgresql = "^3.15.0"
pulumi-random = "^4.17.0"
pulumi-tls = "^5.1.0"
pulumiverse-scaleway = "^1.27.1"
python = "^3.10"
sopsy = "^1.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
flake8 = "^7.1.1"
pre-commit = "^4.1.0"
pulumi-gcp = "^8.18.0"
toml-sort = "^0.24.2"
