[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=45", "wheel"]

[dependency-groups]
dev = [
  "black>=25.1.0",
  "flake8>=7.2.0",
  "pre-commit>=4.2.0",
  "toml-sort>=0.24.2",
]

[project]
dependencies = [
  "awscli>=1.38.16",
  "pg8000>=1.31.2",
  "pulumi-aws>=6.66.2",
  "pulumi-awsx>=2.21.0",
  "pulumi-cloudflare>=6.4.1",
  "pulumi-gcp>=8.18.0",
  "pulumi-kubernetes>=4.21.1",
  "pulumi-postgresql>=3.15.0",
  "pulumi-random>=4.17.0",
  "pulumi-tls>=5.1.0",
  "pulumi>=3.0.0",
  "pulumiverse-scaleway>=1.27.1",
  "sopsy>=1.1.0",
]
description = "Infrastructure for my homelab"
name = "infra"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[tool.setuptools]
include-package-data = true
packages = ["resources"]

[tool.setuptools.package-data]
resources = ["**/*"]
